--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -16,11 +16,11 @@ Jobst Heinrich Krückeberg (left page) ^|Land Assignment Report (right page)
 == Overview
 
 The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. It accompanied
-the Land Assignment Report on the right page.
+the Land Assignment Report shown on the right page.
 
 === Petition of Jobst Heinrich Krückeberg
 
-The petition of Jobst Heinrich Krückeberg requests:
+Jobst Heinrich Krückeberg's petition requests:
 
 * To purchase the corner of land for a fair price.
 
