--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -70,8 +70,8 @@ full farmer (*Vollbauer*). Köter were usually lower in the village social hiera
 craftsmen in addition to small-scale agriculture. The term does **not** indicate a given name.
 ****
 
-The *marginal note*, the text on the left, is a response to the remitted report, but not a formal reply addressed to
-Krückeberg. It is an internal instruction, filed with the main document for reference and action.
+The *marginal note*, the darker, somewhat smaller text on the left, is a response to the remitted report, but not a
+formal reply addressed to Krückeberg. It is an internal instruction, filed with the main document for reference and action.
 It is a reaction from the higher office (the Kammer), giving administrative directives:
 
 * Approving the allocation of the parcel (so Krückeberg’s request is likely approved).
