--- a/todo.adoc
+++ b/todo.adoc
@@ -1,11 +1,10 @@
 = TODO
 
-* For the link:file:///home/kurt/nla-documents/public/nla-docs/1.0/1237/image3-overview.html[Page 3 Overview] -
-provide on the the overview of "page 3" also the left page opposite it. Use a 25% scale of "image3-left-page.jpg".
-Provde two images side by side: the righ one will be a scalled down version of 003-right-page.png. 
-* Mention in the overview both the text on page three and the petition on the left opposite page.
+* Volunteer for Convention
 
-What is the meaning/significance of the numbers in squares written in the upper right hand corner? They
+* Append 06-left-page image and text into image5 image and text.
+
+Question: What is the meaning/significance of the numbers in squares written in the upper right hand corner? They
 are written in the same ink as the original text. Do they indicate the corresponding number in the Record
 of Proceedings? 
 
