--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -12,7 +12,7 @@
 ** xref:image3-4-report-and-response.adoc[]
 * xref:image5-overview.adoc[]
 ** xref:image5-left-page.adoc[]
-** xref:image5-main-txt.adoc[]
+** xref:image5-6-main-txt.adoc[]
 ** xref:image6-left-page.adoc[]
 * *TODO:* Images 6-11
 * xref:image11-12.adoc[]
