--- a/modules/1237/pages/image6-left-page.adoc
+++ b/modules/1237/pages/image6-left-page.adoc
@@ -3,7 +3,7 @@
 image::06-left-page.png[link=self]
 [verse]
 ____
-hiezru verstehen will, werdet
+hierzru verstehen will, werdet
 Ihr sodann den Platz in Gegen-
 wart des Försters Talkmann
 mit Rücksicht auf den Weg zur Einfahrt für
