--- a/modules/1237/pages/cover-new.adoc
+++ b/modules/1237/pages/cover-new.adoc
@@ -2,7 +2,7 @@
 
 ....
 Ausweisungen & Rottländereien
-specia
+Specia
 bim Amt Butkeburg
 
 Berenbusch no. 10
@@ -21,5 +21,10 @@ und Rotländereÿ
                     betreffend
 1798-1800
           Amt Buckeburg
+
+
+
+
+C. 67
 ....
 
