--- a/modules/1237/pages/cover-new.adoc
+++ b/modules/1237/pages/cover-new.adoc
@@ -1,4 +1,10 @@
-= New Cover
+= Acta Cover
+:page-role: wide
+
+image::1237-cover.png[link=self]
+
+NOTE: *"Ger."* appears to be the intended abbreviation for *“Gericht”*; a stray dot may falsely suggest an “i”.
+
 
 ....
 Ausweisungen & Rottländereien
@@ -9,18 +15,18 @@ Berenbusch no. 10
 
 AB                         Rep: II
 
-       ACTA
-     Ausweisung
-und Rotländereÿ
-                 inspecie
-          die dem Colon Krückeberg
-          Nr: 10, zu Berenbusch aus
-          gewiesenen Plätze zur
-          Vergrößerung seines
-          Hofraums und Gartens,
+                 ACTA
+               Ausweisung
+          und Rotländereÿ
+                           inspecie
+                    die dem Colon Krückeberg
+                    Nr: 10, zu Berenbusch aus-
+                    gewiesenen Plätze zur
+                    Vergrößerung seines
+                    Hofraums und Gartens,
                     betreffend
 1798-1800
-          Amt Buckeburg
+                    Amt Buckeburg
 
 
 
