--- a/modules/1237/pages/cover.adoc
+++ b/modules/1237/pages/cover.adoc
@@ -1,12 +1,11 @@
-= Dossier Cover
+= Acta Cover
 :page-role: wide
 
 image::1237-cover.png[link=self]
 
 NOTE: *"Ger."* appears to be the intended abbreviation for *“Gericht”*; a stray dot may falsely suggest an “i”.
 
-
-[cols="a,a"]
+[cols="1a,1a"]
 |===
 |Transliteration|Translation
 
@@ -14,28 +13,27 @@ NOTE: *"Ger."* appears to be the intended abbreviation for *“Gericht”*; a st
 [verse]
 ____
 Ausweisungen & Rottländereien
-Specia[f?]                            <— struck through
-Ger.[?] Amt Bückeburg
+Specia
+bim Amt Butkeburg
 
-                            Rep:II
+Berenbusch no. 10
 
+AB                         Rep: II
 
-                  ACTA
-                 Ausweisungen
-             und Rotländereÿ
-
-                    in specie
-                 die dem Colon Krückeberg
-                 No 10, zu Berenbusch aus[-]
-                 gewiesene Plätze zur
-                 Vergrößerung seines
-                 Hofraums unmd Gartens
-
-
-                  betreffend
+                 ACTA
+               Ausweisung
+          und Rotländereÿ
+                           inspecie
+                    die dem Colon Krückeberg
+                    Nr: 10, zu Berenbusch aus-
+                    gewiesenen Plätze zur
+                    Vergrößerung seines
+                    Hofraums und Gartens,
+                    betreffend
 1798-1800
+                    Amt Buckeburg
 
-                  Amt Bückeburg
+
 
 
 C. 67
@@ -44,43 +42,63 @@ ____
 |
 [verse]
 ____
-Allocations & Fallow Lands
-Specia[f?]                            <— struck through
-Court Office Bückeburg
-AB
+Land Allocations & Cleared Lands  
+specific  
+at the Office of Bückeburg  
 
-                         File Group: II
+Berenbusch No. 10  [struck through]
 
-                         FILE
-                  Allocations
-              and Fallow Lands
+AB                               Rep: II
 
-                        Specifically
-                 the plots allocated to
-                 the Colon Krückeberg
-                 No. 10, in Berenbusch,
-                 for the enlargement of his
-                 farmyard and garden
+                          ACTA  
+                   Allocations  
+           and Cleared Lands  
 
-                   concerning
-1798–1800
+                            in specie  
+            Regarding the plots assigned to  
+            Colon Krückeberg, No. 10, in Berenbusch,  
+            for the enlargement of his  
+            yard space and garden.  
 
-                   Office of Bückeburg
+1798–1800  
+Office of Bückeburg  
 
+C. 67
+____
 
-C. 67 [<--- What does this mean?]
+[verse]
+____
+K 2 A Nr. 1237
 ____
 |===
 
-
-== Glossary of Terms from Document Cover
+== Glossary of Terms
 
 [glossary]
-ACTA:: Latin. Plural of *actum*, meaning *"acts,"* *"records,"* or *"proceedings."* In this context, it refers to the official record or file of a legal or administrative matter.
+Ausweisungen::
+  Land allocations or assignments. Formal designation of land parcels, often by government or ducal authority.
 
-in specie:: Latin phrase meaning *"specifically,"* *"in detail,"* or *"in kind."* In 18th–19th century German administrative documents, it commonly introduces a specific description of what a file or act contains.
+Rottländereien::
+  Cleared lands (from *roden*, “to clear”). Forested or unused land prepared for cultivation or settlement.
 
-betreffend:: German. Means *"concerning,"* *"regarding,"* or *"relating to."* Used at the end of document titles or headers to indicate the subject matter of the file.
+specia::
+  Likely an abbreviated or corrupted form of *in specie*. Suggests the file pertains to a specific case, not general policy.
 
-Amt:: German. Literally *"office"* or *"district authority."* In this context, *Amt Bückeburg* refers to the territorial and administrative authority based in Bückeburg, responsible for local governance and official recordkeeping.
+in specie::
+  Latin: “in kind” or “in specific form.” Used to indicate that a matter is addressed concretely, not generically.
+
+bim::
+  Archaic/regional variant of *beim* (short for *bei dem*), meaning “at the” — e.g., *bim Amt Bückeburg* = “at the Office of Bückeburg.”
+
+Colon::
+  A historical title for a hereditary tenant farmer (modern German: *Kolon*). Not a military or academic rank.
+
+Hofraum::
+  Courtyard or yard area of a farmstead. Often part of the recorded property area in land documents.
+
+Garten::
+  Garden area, usually for private or agricultural use.
+
+ACTA::
+  Latin for “records,” “files,” or “off
 
