--- a/modules/354/pages/image2.adoc
+++ b/modules/354/pages/image2.adoc
@@ -43,25 +43,30 @@ ____
 |
 [verse]
 ____
-Mr. Reinecke appeared and presented the following:
+Mr. Reinecke appeared and presented
+how Jobst Krückenberg’s house,
+situated on the estate of Mr. Drost von dem Brinck,
+was in a very dilapidated and nearly ruined condition.
+Since Krückenberg has been in arrears
+on the contributions for many years,
+there is concern that if the house collapses,
+the city could suffer damage as a result.
+He therefore requested—since Krückenberg
+is not in a position to contribute the least amount,
+and in addition already owes as much in contributions
+as the house is worth, and since
+the city is presently, as is well known,
+in great need—that he be permitted,
+with substitution of this house,
+to proceed with a forced sale (Subhasta),
+as it would be entirely for the best;
+he had duly received prior authorization for this.
 
-That Jobst Krückeberg’s house on the estate of the Lord Drost von dem Brinck
-was in a very dilapidated and almost ruinous condition, since this Krückeberg
-had for many years remained in arrears on his contribution payments, and there
-was concern that, should this house collapse, the city would suffer damage as a
-result.
-
-Therefore, since Krückeberg is not in a position to pay even the slightest
-amount, and in addition already owes as much in back contributions as the house
-is worth, and since the city is now, as is well known, in very great need of
-money, he requested that, in substitution, this house be placed in a public
-auction, as this would serve the overall best interest.
-
-Respectfully submitted for
-entry in the church book,
-and the day for the public auction
-is scheduled for the 15th
-of the upcoming month of December of this year.
+To be brought to the Count’s attention,
+and entered into the church office register for information,
+and a date for the forced sale (Subhasta)
+be set for the 15th of the coming
+month of December of this year.
 ____
 |===
 
