--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -14,5 +14,6 @@
 ** xref:image5-left-page.adoc[]
 ** xref:image5-6-main-txt.adoc[]
 * xref:image6-right-page.adoc[]
+* xref:image7-right-page.adoc[]
 * *TODO:* Images 6-11
 * xref:image11-12.adoc[]
