--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -15,5 +15,6 @@
 ** xref:image5-6-main-txt.adoc[]
 * xref:image6-right-page.adoc[]
 * xref:image7-right-page.adoc[]
+* xref:image8-right-page.adoc[]
 * *TODO:* Images 8-10
 * xref:image11-12.adoc[]
