--- a/modules/1237/pages/image9-right-page.adoc
+++ b/modules/1237/pages/image9-right-page.adoc
@@ -6,3 +6,41 @@ This text is a brief regarding the previous documenmt that was sent and also ref
 image::09-right-page.png[link=self]
 
 == Transliteration and Translation
+
+[verse]
+____
+ad nr. D: 322. F. S.
+Concept Cammer : Rescripts
+an die Beamte zu Buckeburg
+
+                       V. G.G.
+                       Wir laßen Euch auf Euren Bericht
+                       vom 18. d. M. in Ansehung der dem
+                       Colon Kruckeberg Nr: 10 zu Beren-
+                       busch, behuf zur Vergrößerung
+                       seines Hofraums und Gartens zu
+                       respective 19 Nuten 44 Fus dei¬
+                       ausgern
+                       u: 1 Rüte 90 Fus ausgegaßenen
+                       Plätze, und des davon zu Michaelis
+                       dieses Jahrs zum erstenmahl 
+                       und künftig jährlich mit zweÿy Mg.
+                       1 d. zu entrichtenden Rottzinses
+                       hiedurch ohnverhalten: daß Wir
+                       die Ausweisung dieser Plätze unter
+                       Cap: p: Bolte.
+                       den Euch durch Unser Rescript vom
+                       11. Merz 1799, eröfneten Bedin-
+                       gungen, sowie auch jenen Ansatz
+                       des Rottzinses genehmiget haben
+                       Ihr habt also dahin zu sehen damit
+                       der Colon Kruckeberg die ihm
+                       von Euch ohne Zweifel bekannt
+                       gemachten Bedingungen genau
+                       erfüllen möge, wie denn derselbe
+                       nunmehr das bestimte Kaufgeld
+                       per 4 Rute mit 2.4. nigl: folglich
+                       überhaupt vierzehn Rthlr
+                       
+                                   8 mg.
+____
