--- a/modules/1237/pages/image9-right-page.adoc
+++ b/modules/1237/pages/image9-right-page.adoc
@@ -5,6 +5,8 @@ This text is a brief regarding the previous documenmt that was sent and also ref
 
 image::09-right-page.png[link=self]
 
+image::10-left-page-bkgnd-needs-work.png[link=self]
+
 == Transliteration and Translation
 
 [verse]
