--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -16,6 +16,5 @@
 * xref:image6-right-page.adoc[]
 * xref:image7-right-page.adoc[]
 * xref:image8-right-page.adoc[]
-* xref:image9-right-page.adoc[]
-* *TODO:* Images 8-10
+* xref:images9-10.adoc[]
 * xref:image11-12.adoc[]
