--- a/modules/1237/pages/images9-10.adoc
+++ b/modules/1237/pages/images9-10.adoc
@@ -1,4 +1,4 @@
-= Image 9, Right Page (Under Development)
+= Images 9-10, Right Page (Under Development)
 :page-role: wide
 
 This text is a brief regarding the previous documenmt that was sent and also referencing yet another document.
