--- a/modules/1237/pages/images9-10.adoc
+++ b/modules/1237/pages/images9-10.adoc
@@ -3,9 +3,17 @@
 
 This text is a brief regarding the previous documenmt that was sent and also referencing yet another document.
 
+[NOTE]
+====
+The top of image 10 continues the text from image 9, but the signatures after the first
+paragraph at the top of image 10, which is then immediately followed to the left of the signature
+the new heading words "Concept Cammer" suggests that the remaing text if or might be a new document, which
+is signed at the bottom of image 10.
+====
+
 image::09-right-page.png[link=self]
 
-image::10-left-page-bkgnd-needs-work.png[link=self]
+image::10-left-page.png[link=self]
 
 == Transliteration and Translation
 
@@ -44,4 +52,46 @@ Cap: p: Bolte.
                        überhaupt vierzehn Rthlr
                        
                                    8 mg.
+____
+
+Continuation of text on image 10.
+
+[verse]
+____
+                       8 mgl: 1 d. an Unsere Lammeroasse
+                       zuzahlen hat. Wir verbleiben,
+                       Buckeburg d 27. October 1800
+                       Anstatt p
+
+                                              A Waag
+Concept Cammer: Anweisung H.
+an den Cammerwontmeister                        Wintz
+Mgr Danckwerk
+Stackmann
+
+                       Der Cammerrentmeister Hackmann
+                       wird hiemit angewiesen, von dem
+                       Colon Kruckeberg Nr: 10, zu Schirn
+                       eichen für die demselben zur Ver-
+                       größerung seines Gartens u. Hof-
+Exp: per Boltesp
+                       raums ausgewiesene Plätze, welche
+                       zusam̅en w 1 Stuten 34 Ins Dec:
+                       das Kaufgeld per Räte mit 20 4 mgl. u
+                       betragen.
+                       also vierzehn Rthlr 8 mg. 1 d. zu
+                       erheben, in der Cammerrechnung
+                       gehöriges Orts zu vereinnahmen,
+                       und solche mit dieser Anweisung
+                       zu rechtfertigen. Bückeburg
+                       den 27. October 1800.
+                       Gräflich : p
+                                              Mkaas
+                       Juris Danckwerk
+                                  Wint
+
+
+
+
+                                        Wipperman
 ____
