--- a/modules/1237/pages/cover.adoc
+++ b/modules/1237/pages/cover.adoc
@@ -43,18 +43,18 @@ ____
 [verse]
 ____
 Land Allocations & Cleared Lands  
-specific  
+Case file 
 at the Office of Bückeburg  
 
 Berenbusch No. 10  [struck through]
 
 AB                               Rep: II
 
-                          ACTA  
+                     RECORDS  
                    Allocations  
-           and Cleared Lands  
+               and Fallow Lands  
 
-                            in specie  
+                     specifically concerning  
             Regarding the plots assigned to  
             Colon Krückeberg, No. 10, in Berenbusch,  
             for the enlargement of his  
@@ -63,7 +63,7 @@ AB                               Rep: II
 1798–1800  
 Office of Bückeburg  
 
-C. 67
+C. 67 [likely an archivalk or administrative reference number]
 ____
 |===
 
@@ -96,4 +96,9 @@ Garten::
 
 ACTA::
   Latin for “records,” “files,” or “off
+
+C. 67::
+  A likely archival or administrative reference number. The letter "C" may designate a filing category, shelf, or
+collection series, while "67" indicates the item or folder number within that series. Such notations were commonly
+written on dossier covers by clerks or archivists to organize case files for internal tracking or retrieval.
 
