--- a/modules/1237/pages/image1.adoc
+++ b/modules/1237/pages/image1.adoc
@@ -65,7 +65,7 @@ Beamten zu Bückeburg, d.d.
 |3.
 |Concept Cammer Rescripts +
 an gedachte Beamte, d.d.
-|Draft Cammer rescript to the aforementioned officials, dated.
+|Draft instruction from the fiscal office to the aforementioned officials.
 |
 |1800
 |Mart
@@ -93,7 +93,7 @@ von Lieutenant Funck
 an die Beamten zu Bückeburg +
 desgl. an den Cammerwahr- +
 meister Barkmann, d.d.
-|Draft Cammer rescripts to the Bückeburg officials, and likewise to Cammer Treasurer Barkmann, dated.
+|Draft instructions from the fiscal office to the Bückeburg officials, and likewise to the fiscal treasurer Barkmann.
 |
 |
 |
