--- a/modules/1237/pages/image2-forestry-report.adoc
+++ b/modules/1237/pages/image2-forestry-report.adoc
@@ -39,9 +39,10 @@ It means this document is classified as a *rescript*, i.e., an official directiv
 |*B. 14. Jun. 1798*|*B.* = Berichtet (Reported). Processed or recorded by the office on this date.
 
 |*Nr: 1*|First document in the case file
-
-|*praes: 30. May 1798*|praesentiert, meaning “presented” or “submitted” on this date
 |===
+
+//|*praes: 30. May 1798*|praesentiert, meaning “presented” or “submitted” on this date
+//|===
 
 == Transliteration and Translation 
 
